# claude-registry

./: .gitignore  README.md  index.json
.github/workflows/: build-index.yml  validate.yml
cli/: pyproject.toml
cli/claude_registry/: __init__.py  cli.py  config.py  paths.py  registry.py
cli/claude_registry/commands/: install_mcp.py  install_skill.py  list_cmd.py
docs/: CONTRIBUTING.md
mcp_server/: pyproject.toml
mcp_server/registry_mcp/: server.py
mcp_server/registry_mcp/_lib/: __init__.py  config.py  packaging.py  paths.py  registry.py  state.py
mcp_server/registry_mcp/tools/: catalog.py  export_skill.py  install_mcp.py  install_skill.py  manage.py  setup.py
mcps/filesystem-mcp/: manifest.json
mcps/github-mcp/: README.md  manifest.json
schema/: mcp-manifest.schema.json  skill-manifest.schema.json
scripts/: bootstrap.py  build_index.py  validate.py
skills/csv-cleaner/: SKILL.md  manifest.json
skills/pdf-summarizer/: SKILL.md  manifest.json
skills/pdf-summarizer/scripts/: extract.py
skills/text-uppercase/: SKILL.md  manifest.json
tests/: test_config.py
