[project]
name = "claude-registry"
version = "0.1.0"
description = "Install Claude Desktop skills and MCP servers from a GitHub registry"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "claude-registry" }]
dependencies = [
    "click>=8.1",
    "requests>=2.31",
    "rich>=13.7",
]

[project.scripts]
claude-registry = "claude_registry.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["claude_registry*"]
